[package]
name = "wood_grain"
version = "0.1.3"
authors = ["jekto_vatimeliju <jekto.vatimeliju@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Generates a good-enough horizontal section of a wood. Algorithm is taken from https://lodev.org/cgtutor/randomnoise.html#Wood and slightly modified to match my needs."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
rand = "0.8.0"
rand_distr = "0.4.0"
interpolation = "0.2.0"